--- a/index.html
+++ b/index.html
@@ -2,28 +2,28 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
+  <!-- <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"> -->
   <title>Maple Resume</title>
-  <link href="//code.jquery.com/ui/1.11.2/themes/smoothness/jquery-ui.min.css" rel="stylesheet" type="text/css">
+  <link href="css/jquery-ui.min.css" type="text/css">
   <link href="css/page.css" rel="stylesheet" type="text/css">
   <link href="css/clockbg.css" rel="stylesheet" type="text/css">
   <link href="css/skilltree.css" rel="stylesheet" type="text/css">
-	<script src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-	<script src="//code.jquery.com/ui/1.11.2/jquery-ui.min.js"></script>
+	<script src="js/jquery-1.11.2.min.js"></script>
+	<script src="js/jquery-ui.min.js"></script>
 	<script src='js/pagedata.js'></script>
 	<script src='js/keyborad.js'></script>
 	<script src='js/clockbg.js'></script>
 	<script src='js/skilltree.js'></script>
 </head>
 <body>
-  <section id="page1" class="page">
-		<h1>黃鈺雯 Maple<br>RESUME</h1>
+  <header id="title" class="page">
+		<h1>黃鈺雯 Maple <br><span>RESUME</span></h1>
 		<p>台東大學資訊管理學系學士 (2003~2007)<br>
 https://github.com/maplenote</p>
-  </section>
+  </header>
   <section id="page2" class="page">
 		<h2>網頁工程師 經驗 7年</h2>
-		<ul>
+		<ul class='inline'>
 			<li>設計 0.5</li>
 			<li>+ 前端</li>
 			<li>+ 後端</li>
@@ -34,9 +34,9 @@ https://github.com/maplenote</p>
 			大多都是獨立作業或帶後輩
 		</p>
   </section>
-  <section id="page3" class="page">
-		<h2>技能</h2>
-		<div class='skillTree bg1' data-showlevel='1'>
+  <section id="page3-1" class="page">
+		<h2>前端技能</h2>
+		<div class='skillTree' data-showlevel='1'>
 	    <ul>
 	      <li>FrontEnd
 	        <ul>
@@ -64,8 +64,11 @@ https://github.com/maplenote</p>
 	        </ul>
 	      </li>
 	    </ul>
-	  </div>
-	  <div class='skillTree bg2' data-showlevel='1'>
+	  </div>  
+  </section>
+  <section id="page3-12" class="page">
+		<h2>後端技能</h2>
+	  <div class='skillTree' data-showlevel='1'>
 	    <ul>
 	      <li>BackEnd
 	        <ul>
@@ -92,7 +95,10 @@ https://github.com/maplenote</p>
 	      </li>
 	    </ul>
 	  </div>
-	  <div class='skillTree bg3' data-showlevel='1'>
+  </section>
+  <section id="page3-3" class="page">
+		<h2>其他技能</h2>
+	  <div class='skillTree' data-showlevel='1'>
 	    <ul> 
 	      <li>Other
 	        <ul>
@@ -119,22 +125,22 @@ https://github.com/maplenote</p>
   </section>
   <section id="page4" class="page">
 		<h2>經歷</h2>
-		<ul>遊戲王有限公司  2007~2008
-			<li data-class='hightlight'>卡特斯電玩討論購物網站</li>
+		<ul class='list'>遊戲王有限公司  2007~2008
+			<li data-class='blue'>卡特斯電玩討論購物網站</li>
 		</ul>
-		<ul>禾一精機股份有限公司  2009 ~
+		<ul class='list'>禾一精機股份有限公司  2009 ~
 			<li>禾一官網</li>
-			<li data-class='hightlight'>禾一資訊整合系統</li>
-			<li>遞搜比國際 - 船舶零件買賣二手交易網</li>
+			<li data-class='blue'>禾一資訊整合系統</li>
+			<li>遞搜比國際 - 船舶零件買賣</li>
 			<li>知識管理平台</li>
-			<li data-class='hightlight'>禾一詢價 App (Android)</li>
+			<li data-class='blue'>禾一詢價 App (Android)</li>
 			<li>資料分析圖表 (試驗性)</li>
 		</ul>
   </section>
   <section id="page5" class="page">
   	<header>
   		<h2>2005~2007年</h2>
-  		<div>#photoshop</div>
+  		<div class='tag'>#photoshop</div>
   	</header>
   	<figure>
   		<img src="img/nttu.jpg" alt="演講海報" class='fill'>
@@ -143,46 +149,46 @@ https://github.com/maplenote</p>
   <section id="page6" class="page">
 		<header>
 			<h2>卡特斯 2007~2008 年</h2>
-			<div>#html #css #js #企劃 #php #mysql </div>
+			<div class='tag'>#html #css #js #php #mysql #企劃 #架構 </div>
 		</header>
+		<p>
+			支援IE6~8 + Firefox<br>
+			<span class='gray'>(2008年9月2日 Chrome 測試版發佈)</span>
+		</p>
 		<figure>
 			<img src="img/cactus.jpg" alt="卡斯特" class='fill'>
 		</figure>
-		<p>
-			支援IE6~8 + Firefox<br>
-			(2008年9月2日 Chrome 測試版發佈)
-		</p>
+		
   </section>
   <section id="page7" class="page">
 		<h2>說個笑話</h2>
-		<p>老闆說: 3 天可以完成購物商城 !</p>
-		<p>商城首頁 + 商品內容頁 + 購物車頁面</p>
+		<p class='size1_3'>老闆說: 3 天可以完成購物商城 !</p>
+		<p class='red size1_3'><strong>商城首頁 + 商品內容頁 + 購物車頁面</strong></p>
+		<br>
 		<p>
-			因為他答應玉山銀行 3 天後就要接金流<br>
+			<spna class='gray'>因為他答應玉山銀行 3 天後就要接金流</spna><br>
 			我燃燒了 7 天的生命...讓它蹦出來了
 		</p>
   </section>
   <section id="page8" class="page">
 		<h2>金流串接</h2>
-		<ul>2008 年
+		<ul class='list'>2008 年
 			<li>玉山銀行 網路ATM</li>
 			<li>紅陽或是綠界(記憶模糊)</li>
 		</ul>
-		<p><br>
-			 
-		</p>
-		<p>
+		<br>
+		<p class='blue'>
 			幫忙抓了一個漏洞<br>
-			使用者可以利用已知資料偽造已經刷卡完成的驗證
+			<span class='size0_8'>使用者可以偽造已經刷卡完成的驗證</span>
 		</p>
 		<p>之後串接過 PayPal (2011 年)</p>
   </section>
   <section id="page9" class="page">
 		<header>
 			<h2>禾一資訊整合系統 2009年 ~ </h2>
-			<div>#xhtml #css #js #php #mysql #sql-server</div>
+			<div class='tag'>#xhtml #css #js #php #mysql #msqql #架構</div>
 		</header>
-		<ul>
+		<ul class='list'>
 			<li>目前 10 個模組 / 77 支作業</li>
 			<li>功能: 業務協助 + 製造控管 + 自動傳真</li>
 			<li>高度權限控管需求，只好自己造輪子</li>
@@ -199,9 +205,9 @@ https://github.com/maplenote</p>
   <section id="page10" class="page">
 		<header>
 			<h2>禾一詢價 App 2013年</h2>
-			<div>#java #android #php #mysql #codeIngniter #sass</div>
+			<div class='tag'>#java #android #mysql #codeIngniter #sass #架構</div>
 		</header>
-		<ul>
+		<ul class='list'>
 			<li>功能: 拍照、詢報價、下訂單、GCM</li>
 			<li>語系: 英文、繁中、簡中</li>
 			<li>負責: Android 90%, CodeIgniter 100%, 整合系統合併 60%, 宣傳文宣 50%</li>
@@ -209,44 +215,43 @@ https://github.com/maplenote</p>
 			<li>規劃 Activity 跟 layout 架構</li>
 			<li>規劃多語系與 API</li>
 		</ul>
-		<figure>
-			<img src="img/app1.jpg" alt="詢價APP">
-			<img src="img/app2.jpg" alt="詢價APP">
+		<figure class='groupimg'>
+			<img src="img/app1.jpg" alt="詢價APP" class='maxHeight'>
+			<img src="img/app2.jpg" alt="詢價APP" class='maxHeight maxWidth70'>
 		</figure>
   </section>
   <section id="page11" class="page">
 		<h2>Wireframe 與實際畫面對照</h2>
-		<figure>
-			<img src="img/app3.jpg" alt="Wireframe">
-			<img src="img/app4.jpg" alt="詢價APP">
-		</figure>
-		<figure>
-			<img src="img/app5.jpg" alt="Wireframe">
-			<img src="img/app6.jpg" alt="詢價APP">
+		<figure class='groupimg'>
+			<img src="img/app3.jpg" alt="Wireframe" class='maxHeight maxWidth20'>
+			<img src="img/app4.jpg" alt="詢價APP" class='maxHeight maxWidth20'>
+			<img src="img/app5.jpg" alt="Wireframe" class='maxHeight maxWidth20'>
+			<img src="img/app6.jpg" alt="詢價APP" class='maxHeight maxWidth20'>
 		</figure>
   </section>
   <section id="page12" class="page">
-		<h2>其他經歷</h2>
-		<ul>
-			<li>參與高雄前端社群  (2013.3 創立)
-				<ul>
-					<li>
-						2013.9.15 高雄前端社群 #4 - PSDtoHTML Workshop<br>
-						<a href='https://github.com/maplenote/kh_f2e_4' target='_blank'>
-							https://github.com/maplenote/kh_f2e_4
-						</a>
-					</li>
-					<li>
-						2013.12.8 高雄前端社群 #6 - 絕對教會你 jQuery 動畫效果 之 jQuery UI
-					</li>
-					<li>
-						2014.10.15 高雄前端社群 #13 PhoneGap + Kendo UI 打造柯 P 音樂 APP<br>
-						<a href='https://github.com/maplenote/kh_f2e_13' target='_blank'>
-							https://github.com/maplenote/kh_f2e_13
-						</a>
-					</li>
-				</ul>
+		<h2>其他經歷</h2>	
+		<ul class='list'>參與高雄前端社群  (2013.3 創立)
+			<li>
+				2013.9.15 高雄前端社群 #4 - PSDtoHTML Workshop<br>
+				<a href='https://github.com/maplenote/kh_f2e_4' target='_blank'>
+					https://github.com/maplenote/kh_f2e_4
+				</a>
 			</li>
+			<li>
+				2013.12.8 高雄前端社群 #6 - 絕對教會你 jQuery 動畫效果 之 jQuery UI
+			</li>
+			<li>
+				2014.10.15 高雄前端社群 #13 PhoneGap + Kendo UI 打造柯 P 音樂 APP<br>
+				<a href='https://github.com/maplenote/kh_f2e_13' target='_blank'>
+					https://github.com/maplenote/kh_f2e_13
+				</a>
+			</li>
+		</ul>
+  </section>
+  <section id="page13" class="page">
+		<h2>其他</h2>	
+		<ul class='list'>
 			<li>MOPCON 2014 工作人員</li>
 			<li>KSDG 社群 工作人員</li>
 			<li>3D 動畫專業學程</li>
@@ -256,15 +261,15 @@ https://github.com/maplenote</p>
 		</ul>
 		
   </section>
-  <section id="page13" class="page">
+  <section id="page14" class="page">
 		<h2>進修</h2>
-		<ul>
+		<ul class="list">
 			<li>
 				Android 應用軟體開發實務班<br>
 				資策會 2013.5~2013.7 (72 hr)
 			</li>
 			<li>
-				Javascript & AngularJs 開發實戰<br>
+				Javascript &amp; AngularJs 開發實戰<br>
 				Will 保哥 2013.7.20 (8 hr)<br>
 				Will 保哥 2014.8.17 (7 hr)
 			</li>
@@ -274,19 +279,20 @@ https://github.com/maplenote</p>
 			</li>
 		</ul>
   </section>
-  <section id="page14" class="page">
+  <section id="page15" class="page">
 		<h2>未來目標</h2>
 		<ul>
 			<li>前端: 跨裝置、模組化、往地雷區踩雷跟挖坑! </li>
-			<li>後端: 加強資安跟效能調教的部分<span>(瓶頸)</span></li>
+			<li>後端: 加強資安跟效能調教的部分 <span>(瓶頸)</span></li>
 			<li>其他: 團隊合作、NodeJs</li>
 		</ul>
+		<br>
 		<p>寫網頁是興趣! 其實都會碰!</p>
 		<p>只差在自學的速度跟不上整個範圍</p>
   </section>
-  <section id="page15" class="page">
+  <footer id="footer" class="page">
 		<h1>Thanks</h1>
-  </section>
+  </footer>
 	<aside id='clock'></aside>
 </body>
 </html>
