--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ https://github.com/maplenote</p>
     <h2>未來目標</h2>
     <ul>
       <li data-step="1" data-action="show">前端: 跨裝置、模組化、往地雷區踩雷跟挖坑! </li>
-      <li data-step="2" data-action="show">後端: 加強資安跟效能調教的部分 <span data-step="5" data-action="show" class='red'>(瓶頸)</span></li>
+      <li data-step="2" data-action="show">後端: 加強資安跟效能調教的部分 <span data-step="5" data-action="show" class='gray'>(卡關)</span></li>
       <li data-step="3" data-action="show">其他: 團隊合作、NodeJs</li>
     </ul>
     <br>
