Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
         <span class="blc"></span><span class="trc"></span>
         </div>
         <article class="markdown-body">
-          <p>PS. 用兩天緊急寫出來的畫面，只能跑 PC 的 Browser (還沒時間修) - 2015.2.11</p>
+          <p>網頁投影簡報 Demo: <a href="http://rawgit.com/maplenote/about-me/master/index.html">http://rawgit.com/maplenote/about-me/master/index.html</a> <br>
+PS. 用兩天緊急寫出來的畫面，只能跑 PC 的 Browser (還沒時間修) - 2015.2.11</p>
 
 <hr>
 
